# protoOS

./: CMakeLists.txt  README.md  Review Activities.md  protoOS vb0.1.ino
.github/workflows/: main.yml
3d models/: circles.STL  visor.STL
resources/3d models/: headband.STL
resources/Example/Protogen_OS_V3.1_mod/: Protogen_OS_V3.1_mod.ino
vb0.2/: vb0.2.ino
vb1.0/: 20x4-ref.md  vb1.0.ino
vb1.0/led_test/: led_test.ino
vb1.1/: vb1.1.ino
vb1.2/: vb1.2.ino
vb1.3/: vb1.3.ino
vb1.4/: materials.md  nunchuck_funcs.h  vb1.4.ino
vb2.0/: nunchuck_funcs.h  vb2.0.ino
vb3.0/: vb3.0.ino
